--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 OPENAI_API_KEY=your_openai_api_key
 OPENAI_MODEL=gpt-4
 
+DEMO_MODE=false
+
+
 # Anthropic Claude
 # ANTHROPIC_API_KEY=your_anthropic_api_key
 # ANTHROPIC_MODEL=claude-3-sonnet-20240229
