Recovering and Fixing LinkedIn Integration

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Supabase Configuration
 SUPABASE_URL=your_supabase_project_url
-SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+SUPABASE_API_KEY=your_supabase_api_key
+# SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
 # LLM Configuration (choose one)
 # OpenAI
@@ -9,6 +9,10 @@ OPENAI_API_KEY=your_openai_api_key
 OPENAI_MODEL=gpt-4
 
 DEMO_MODE=false
+
+# LinkedIn App Credentials
+LINKEDIN_CLIENT_ID=your_client_id_here
+LINKEDIN_CLIENT_SECRET=your_client_secret_here
 
 
 # Anthropic Claude
@@ -25,3 +29,10 @@ LOCAL_SERVER_HOST=127.0.0.1
 
 # Netlify (optional - for rebuild triggers)
 # NETLIFY_BUILD_HOOK_URL=your_netlify_build_hook_url
+
+# LinkedIn OAuth (optional - for auto-publishing)
+# Get credentials from: https://www.linkedin.com/developers/apps
+LINKEDIN_CLIENT_ID=your_linkedin_client_id
+LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret
+# After OAuth flow, paste your access token here:
+# LINKEDIN_ACCESS_TOKEN=your_linkedin_access_token
